[gd_scene load_steps=9 format=3 uid="uid://clfo2nrropg8y"]

[ext_resource type="Script" path="res://Ball/Ball.gd" id="1_2xu4j"]
[ext_resource type="PhysicsMaterial" uid="uid://cql6t5hd40fgn" path="res://CorePhysics.tres" id="1_vk3rj"]
[ext_resource type="Texture2D" uid="uid://wye1kea3ts48" path="res://Ball/Ball.png" id="2_cpnep"]
[ext_resource type="AudioStream" uid="uid://7kjt62y3t8lc" path="res://Sounds/WallHit.wav" id="3_bwkax"]
[ext_resource type="AudioStream" uid="uid://b6vosap1la1ts" path="res://Sounds/BrickHit.wav" id="4_ly8mo"]
[ext_resource type="AudioStream" uid="uid://d3g30x1n2ncjj" path="res://Sounds/PaddleHit.wav" id="5_f8nt3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nwcsc"]
radius = 3.0

[sub_resource type="Gradient" id="Gradient_umh5r"]
colors = PackedColorArray(1, 1, 0, 1, 1, 1, 0, 0)

[node name="Ball" type="RigidBody2D"]
collision_layer = 4
collision_mask = 5
mass = 0.01
physics_material_override = ExtResource("1_vk3rj")
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 5
contact_monitor = true
script = ExtResource("1_2xu4j")

[node name="Shadow" type="Polygon2D" parent="."]
z_index = -1
position = Vector2(1, 2)
color = Color(0, 0, 0, 0.247059)
polygon = PackedVector2Array(-3, -2, -2, -3, 2, -3, 3, -2, 3, 2, 2, 3, -2, 3, -3, 2)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
texture = ExtResource("2_cpnep")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nwcsc")

[node name="WallSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bwkax")
bus = &"Effects"

[node name="BrickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ly8mo")
max_polyphony = 5
bus = &"Effects"

[node name="PaddleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_f8nt3")
bus = &"Effects"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
color = Color(1, 1, 0, 1)
color_ramp = SubResource("Gradient_umh5r")
hue_variation_min = 1.0
hue_variation_max = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
